--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         .badge { background: #333; padding: 4px 10px; border-radius: 6px; font-weight: bold; font-size: 12px; }
         .btn-video { color: #ff5555; text-decoration: none; font-weight: bold; border: 1px solid #ff5555; padding: 2px 8px; border-radius: 4px; font-size: 11px; text-transform: uppercase; }
 
-        /* CONTROLE DE PESO (NOVO - BOTÕES) */
+        /* CONTROLE DE PESO (BOTÕES) */
         .weight-control { margin-top: 15px; background: #252525; padding: 10px; border-radius: 10px; display: flex; align-items: center; justify-content: space-between; gap: 10px; }
         .weight-label { color: #aaa; font-size: 12px; margin-right: auto; padding-left: 5px; }
         
@@ -217,7 +217,6 @@
         import { getDatabase, ref, set, onValue, push, remove } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
         import { getAuth, signInAnonymously } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
 
-        // SUAS CHAVES (MANTIDAS)
         const firebaseConfig = {
             apiKey: "AIzaSyBXpjF-2oGF3RrfqT9KjthB4NVZXUGtsCg",
             authDomain: "supertreino-e20ee.firebaseapp.com",
@@ -251,10 +250,25 @@
     </script>
 
     <script>
+    // --- DADOS RESTAURADOS COMPLETOS ---
     const defaultDB = {
-        arthur: { name: 'Arthur', themeId: 'theme-1', workouts: [ 
-            { id: 'A', title: 'A - Costas, Ombro e Bíceps', exercises: [ { name: 'Pulley frente', sets: 3, reps: '8', weight: 40 } ] } 
-        ]}
+        arthur: {
+            name: 'Arthur', themeId: 'theme-1',
+            workouts: [
+                { id: 'A', title: 'A - Costas, Ombro e Bíceps', exercises: [ { name: 'Pulley frente', sets: 3, reps: '8', weight: 0 }, { name: 'Remada curvada', sets: 3, reps: '8', weight: 0 }, { name: 'Remada unilateral', sets: 3, reps: '8', weight: 0 }, { name: 'Elevação lateral polia', sets: 3, reps: '8', weight: 0 }, { name: 'Rosca direta', sets: 3, reps: '8', weight: 0 }, { name: 'Rosca Scott', sets: 3, reps: '8', weight: 0 }, { name: 'Desenv. máquina', sets: 3, reps: '8', weight: 0 }, { name: 'Desenv. Arnold', sets: 3, reps: '8', weight: 0 } ] },
+                { id: 'B', title: 'B - Peito, Ombro e Tríceps', exercises: [ { name: 'Crossover alto', sets: 3, reps: '8', weight: 0 }, { name: 'Crossover baixo', sets: 3, reps: '8', weight: 0 }, { name: 'Supino reto', sets: 3, reps: '8', weight: 0 }, { name: 'Supino 45º', sets: 3, reps: '8', weight: 0 }, { name: 'Elevação lateral', sets: 3, reps: '8', weight: 0 }, { name: 'Elevação frontal', sets: 3, reps: '8', weight: 0 }, { name: 'Tríceps polia', sets: 3, reps: '8', weight: 0 }, { name: 'Tríceps corda', sets: 3, reps: '8', weight: 0 } ] },
+                { id: 'C', title: 'C - Pernas', exercises: [ { name: 'Agachamento livre', sets: 3, reps: '12', weight: 0 }, { name: 'Afundo', sets: 3, reps: '12', weight: 0 }, { name: 'Stiff', sets: 3, reps: '12', weight: 0 }, { name: 'Extensora', sets: 3, reps: '12', weight: 0 }, { name: 'Panturrilha leg 45', sets: 3, reps: '12', weight: 0 }, { name: 'Panturrilha banco', sets: 3, reps: '12', weight: 0 } ] }
+            ]
+        },
+        dani: {
+            name: 'Daniele', themeId: 'theme-2',
+            workouts: [
+                { id: 'A', title: 'A - Inferiores I', exercises: [ { name: 'Afundo TRX', sets: 4, reps: '10', weight: 0 }, { name: 'Agach. Barra Hexa', sets: 4, reps: '15', weight: 0 }, { name: 'Extensora', sets: 4, reps: '12', weight: 0 }, { name: 'Leg 45°', sets: 4, reps: '12', weight: 0 }, { name: 'Leg 180°', sets: 4, reps: '15', weight: 0 }, { name: 'Flexora Sentada', sets: 4, reps: '15', weight: 0 }, { name: 'Flexora Unilateral', sets: 4, reps: '10', weight: 0 }, { name: 'Panturrilha Banco', sets: 4, reps: '12', weight: 0 } ] },
+                { id: 'B', title: 'B - Superiores I', exercises: [ { name: 'Puxada Frontal', sets: 4, reps: '12', weight: 0 }, { name: 'Remada Unilateral', sets: 4, reps: '12', weight: 0 }, { name: 'Voador Inverso', sets: 4, reps: '10', weight: 0 }, { name: 'Supino 45°', sets: 4, reps: '12', weight: 0 }, { name: 'Elevação Lateral', sets: 4, reps: '12', weight: 0 }, { name: 'Elevação Frontal', sets: 4, reps: '10', weight: 0 }, { name: 'Tríceps Polia', sets: 4, reps: '15', weight: 0 }, { name: 'Tríceps Francês', sets: 4, reps: '10', weight: 0 }, { name: 'Rosca Direta', sets: 4, reps: '15', weight: 0 } ] },
+                { id: 'C', title: 'C - Inferiores II', exercises: [ { name: 'Adutora', sets: 4, reps: '15', weight: 0 }, { name: 'Abdutora', sets: 4, reps: '15', weight: 0 }, { name: 'Elevação Pélvica', sets: 4, reps: '15', weight: 0 }, { name: 'Sumô', sets: 4, reps: '10', weight: 0 }, { name: 'Leg 45°', sets: 4, reps: '12', weight: 0 }, { name: 'Extensora', sets: 4, reps: '12', weight: 0 }, { name: 'Stiff', sets: 4, reps: '15', weight: 0 }, { name: 'Panturrilha Máquina', sets: 4, reps: '15', weight: 0 } ] },
+                { id: 'D', title: 'D - Superiores II', exercises: [ { name: 'Pulldown', sets: 4, reps: '10', weight: 0 }, { name: 'Remada Curvada', sets: 4, reps: '12', weight: 0 }, { name: 'Voador Inverso', sets: 4, reps: '10', weight: 0 }, { name: 'Crucifixo 45°', sets: 4, reps: '10', weight: 0 }, { name: 'Voador', sets: 4, reps: '10', weight: 0 }, { name: 'Desenvolvimento', sets: 4, reps: '12', weight: 0 }, { name: 'Tríceps Polia', sets: 4, reps: '15', weight: 0 }, { name: 'Tríceps Testa', sets: 4, reps: '10', weight: 0 }, { name: 'Rosca Alternada', sets: 4, reps: '12', weight: 0 } ] }
+            ]
+        }
     };
 
     const quotes = ["Tá pago!", "A dor é temporária.", "Hoje foi pago com juros!", "Sem dor, sem ganho.", "Parabéns monstro!"];
@@ -266,19 +280,26 @@
 
         init: function() {
             if (window.dbInstance) {
+                // Online: Checa Firebase. Se vazio, popula com defaultDB. Se não, usa Firebase.
                 window.dbOnValue(window.dbRef(window.dbInstance, 'users'), (snap) => {
-                    this.data = snap.val() || JSON.parse(JSON.stringify(defaultDB));
-                    if(!snap.val()) this.save();
+                    const val = snap.val();
+                    if(!val) {
+                        this.data = JSON.parse(JSON.stringify(defaultDB));
+                        this.save(); // Popula o Firebase na primeira vez
+                    } else {
+                        this.data = val;
+                    }
                     this.renderMenu();
-                    if(this.currentUser) this.renderWorkoutSelectScreen();
-                    if(this.currentWorkoutIndex !== null) this.renderActiveWorkout();
+                    if(this.currentUser && this.data[this.currentUser]) this.renderWorkoutSelectScreen();
+                    if(this.currentWorkoutIndex !== null && this.data[this.currentUser]?.workouts[this.currentWorkoutIndex]) this.renderActiveWorkout();
                 });
                 window.dbOnValue(window.dbRef(window.dbInstance, 'history'), (snap) => {
                     const val = snap.val();
                     this.historyData = val ? Object.keys(val).map(k => ({...val[k], firebaseId: k})).sort((a,b) => b.id - a.id) : [];
                 });
             } else {
-                this.data = JSON.parse(localStorage.getItem('gymData_v14')) || JSON.parse(JSON.stringify(defaultDB));
+                // Offline fallback
+                this.data = JSON.parse(localStorage.getItem('gymData_v15')) || JSON.parse(JSON.stringify(defaultDB));
                 this.historyData = JSON.parse(localStorage.getItem('gymHistory')) || [];
                 this.renderMenu();
             }
@@ -286,7 +307,7 @@
 
         save: function() { 
             if(window.dbInstance) window.dbSet(window.dbRef(window.dbInstance, 'users'), this.data);
-            else localStorage.setItem('gymData_v14', JSON.stringify(this.data)); 
+            else localStorage.setItem('gymData_v15', JSON.stringify(this.data)); 
         },
 
         // --- MENU PRINCIPAL ---
@@ -355,6 +376,7 @@
             if(!this.currentUser || this.currentWorkoutIndex === null) return;
             const u = this.data[this.currentUser];
             const w = u.workouts[this.currentWorkoutIndex];
+            if(!w) return; // Segurança
             const cont = document.getElementById('active-workout-container');
             
             document.getElementById('active-title').innerText = w.title;
@@ -386,29 +408,28 @@
         },
         toggleActiveEditMode: function() { this.isActiveEditing = !this.isActiveEditing; this.renderActiveWorkout(); },
 
-        // --- MUDANÇA DE ÍCONES (Caneta <-> Disquete) ---
+        // --- MUDANÇA DE ÍCONES ---
         updateEditIcon: function(btnId, screenId, isEditing) {
             const btn = document.getElementById(btnId);
             const screen = document.getElementById(screenId);
             if(isEditing) {
-                btn.innerText = '💾'; // Ícone Salvar
+                btn.innerText = '💾'; 
                 btn.classList.add('icon-active');
                 screen.classList.add('editing');
             } else {
-                btn.innerText = '✏️'; // Ícone Editar
+                btn.innerText = '✏️'; 
                 btn.classList.remove('icon-active');
                 screen.classList.remove('editing');
             }
         },
 
-        // --- FLUXOS DE ADIÇÃO (Corrigidos com Navegação Automática) ---
+        // --- FLUXOS DE ADIÇÃO AUTOMÁTICA ---
         addUser: function() { 
             const n = prompt("Nome da nova pessoa:"); 
             if(n) { 
                 const newId = 'u_'+Date.now();
                 this.data[newId] = { name: n, themeId: `theme-${Math.floor(Math.random()*6)+1}`, workouts:[] }; 
                 this.save();
-                // Navega direto para a tela de treinos da nova pessoa
                 this.currentUser = newId;
                 this.renderWorkoutSelectScreen();
                 this.toggleScreen('screen-workout-select');
@@ -424,7 +445,6 @@
             if(name) { 
                 user.workouts.push({ id: nextId, title: `${nextId} - ${name}`, exercises: [] }); 
                 this.save();
-                // Navega direto para a tela de exercícios do novo treino
                 this.currentWorkoutIndex = user.workouts.length - 1;
                 this.renderActiveWorkout();
                 this.toggleScreen('screen-active-workout');
@@ -443,14 +463,14 @@
             }
         },
 
-        // --- CONTROLE DE PESO NOVO ---
+        // --- CONTROLE DE PESO ---
         chgWeight: function(i, delta) {
             const ex = this.data[this.currentUser].workouts[this.currentWorkoutIndex].exercises[i];
             let w = (parseInt(ex.weight) || 0) + delta;
             if(w < 0) w = 0;
             ex.weight = w;
             this.save();
-            this.renderActiveWorkout(); // Re-renderiza para atualizar input
+            this.renderActiveWorkout(); 
         },
         setWeight: function(i, val) {
             const ex = this.data[this.currentUser].workouts[this.currentWorkoutIndex].exercises[i];
