--- a/index.html
+++ b/index.html
@@ -155,9 +155,11 @@
 
         .edit-controls-floating { position: absolute; right: -8px; top: -8px; display: flex; flex-direction: column; gap: 8px; z-index: 10; animation: popIn 0.2s; pointer-events: none; opacity: 0; }
         .editing .edit-controls-floating { opacity: 1; pointer-events: auto; }
+        
+        /* Floating Buttons Updated Colors */
         .btn-float { width: 34px; height: 34px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; border: 3px solid var(--bg); cursor: pointer; color: #fff; font-size: 14px; box-shadow: 0 4px 8px rgba(0,0,0,0.5); }
-        .btn-del { background: var(--danger); }
-        .btn-reorder { background: var(--secondary); color: #000; }
+        .btn-del { background-color: var(--danger) !important; color: #fff !important; }
+        .btn-reorder { background-color: var(--secondary) !important; color: #000 !important; }
         
         .btn-add-item { display: none; } 
         .editing .btn-add-item { display: block; width: 100%; max-width: 400px; padding: 22px; background: rgba(251, 191, 36, 0.05); border: 2px dashed #3f3f46; color: var(--secondary); border-radius: 16px; cursor: pointer; font-size: 14px; font-weight: 800; margin-top: 15px; text-align: center; letter-spacing: 1px; transition: 0.2s; }
@@ -204,12 +206,12 @@
     </div>
 
     <div id="offline-screen" style="display:none;">
-        <div style="font-size:50px; margin-bottom:20px">🐜</div>
+        <div style="font-size:50px; margin-bottom:20px">🦦</div>
         <div style="color:#fff; font-weight:900; font-size:20px; text-transform:uppercase;">Sem Internet</div>
         <div style="color:#a1a1aa; font-size:14px; margin-top:10px; font-weight:600;">O Kine precisa voar online.</div>
     </div>
 
-    <div class="version-label">VERSÃO: TAMANDUÁ</div>
+    <div class="version-label">VERSÃO: ARIRANHA</div>
 
     <div id="screen-menu" class="screen">
         <div class="header-bar">
@@ -478,7 +480,6 @@
                 btn.className = 'btn-dialog btn-primary';
                 btn.innerText = "OK";
                 btn.style.background = color;
-                // Ajuste de contraste: Se for AMARELO (Success ou Warning), texto preto.
                 btn.style.color = (type === 'warning' || type === 'success') ? '#000' : '#fff'; 
                 btn.onclick = () => { modal.style.display = 'none'; if(confirmCallback) confirmCallback(); };
                 actions.appendChild(btn);
@@ -697,8 +698,8 @@
                         skippedText = `<div class="skipped-list">Pulou: ${h.skipped.join(', ')}</div>`;
                     }
                 }
-                // TRASH ICON AGORA COM CLASSE RED-ICON E SEM OPACIDADE REDUZIDA
-                div.innerHTML = `<div class="hist-top"><div><div class="hist-date">${h.date}</div><div class="hist-workout">${h.workoutTitle}</div></div><div style="text-align:right"><button style="background:none;border:none;margin-top:5px;cursor:pointer;opacity:1" onclick="window.app.delHist(${h.id}, '${h.firebaseId||''}')"><span class="red-icon" style="font-size:20px">🗑</span></button></div></div>${skippedText}`;
+                // TRASH ICON SUBSTITUÍDO POR 'X'
+                div.innerHTML = `<div class="hist-top"><div><div class="hist-date">${h.date}</div><div class="hist-workout">${h.workoutTitle}</div></div><div style="text-align:right"><button style="background:none;border:none;margin-top:5px;cursor:pointer;opacity:1" onclick="window.app.delHist(${h.id}, '${h.firebaseId||''}')"><span class="red-icon" style="font-size:20px">✕</span></button></div></div>${skippedText}`;
                 list.appendChild(div);
             });
         },
@@ -794,8 +795,9 @@
                         this.isTraining = false; 
                         window.onbeforeunload = null; 
                         localStorage.removeItem('tempWorkoutState');
-                        // Aqui selecionamos uma mensagem MONSTRO (Sucesso = Amarelo agora)
+                        // Aqui selecionamos uma mensagem MONSTRO
                         const randomMsg = monstroMessages[Math.floor(Math.random() * monstroMessages.length)];
+                        // Sucesso agora é 'success', que mapeia para AMARELO na paleta nova
                         this.showCustomModal('success', 'MONSTRO!', randomMsg, () => this.goHome());
                     })
                     .catch((err) => {
